--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:setup": "tsx scripts/migrate-and-seed.ts"
   },
   "dependencies": {
     "react": "19.1.0",
@@ -17,7 +18,9 @@
     "next": "15.4.1",
     "dotenv": "^17.2.0",
     "drizzle-kit": "^0.31.4",
-    "drizzle-orm": "^0.44.3"
+    "drizzle-orm": "^0.44.3",
+    "pg": "^8.16.3",
+    "postgres": "^3.4.7"
   },
   "devDependencies": {
     "typescript": "^5",
