fix(docs): env example template

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,6 @@
 # Database Configuration
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/insurance_reco
+
+# Better Auth
+BETTER_AUTH_SECRET=vUfBngiWoEOaLe7jwTwkw4r6Idzfhzbt
+NEXT_PUBLIC_APP_URL=http://localhost:3000
